Prevent footer from overlapping main on small screens

--- a/style.css
+++ b/style.css
@@ -16,14 +16,25 @@ footer {
     text-align: center;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
     html {
         font-size: 1.25rem;
     }
 
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     main {
+        flex: 1 1 auto;
         padding-left: 5%;
         padding-right: 5%;
         padding-top: 10%;
+    }
+
+    footer {
+        position: relative;
     }
 }
